feat/frontend: User authentication with access control has been added.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,7 @@
 
   --color-scheme: light;
   --color-background: #f5f6f9;
-  /* --color-surface:rgb(186, 85, 85); */
+  --color-surface: #ffffff;
   --color-surface-alt: #f7f9fc;
   --color-text-primary: #1f2937;
   --color-text-secondary: #667085;
